--- a/package.json
+++ b/package.json
@@ -44,11 +44,18 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "axios": "^0.18.0",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
+    "react-google-charts": "^1.6.6",
     "react-hot-loader": "^1.3.1",
+    "react-motion": "^0.5.2",
     "react-router": "3.x",
-    "styled-components": "^1.4.4"
+    "react-waypoint": "^6.0.0",
+    "react-zoomy": "^1.1.1",
+    "styled-components": "^1.4.4",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
