--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "react-google-charts": "^1.6.6",
+    "react-google-maps": "^9.4.5",
     "react-hot-loader": "^1.3.1",
     "react-motion": "^0.5.2",
     "react-router": "3.x",
     "react-waypoint": "^6.0.0",
     "react-zoomy": "^1.1.1",
+    "really-smooth-scroll": "^2.1.1",
     "styled-components": "^1.4.4",
     "sweetalert": "^2.1.0"
   },
