--- a/package.json
+++ b/package.json
@@ -44,15 +44,18 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.1.1",
     "axios": "^0.18.0",
+    "google-map-react": "^1.0.5",
     "react": "^15.6.2",
+    "react-8bit": "^0.1.3",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^15.6.2",
     "react-google-charts": "^1.6.6",
-    "react-google-maps": "^9.4.5",
     "react-hot-loader": "^1.3.1",
     "react-motion": "^0.5.2",
     "react-router": "3.x",
+    "react-stepzilla": "^4.7.2",
     "react-waypoint": "^6.0.0",
     "react-zoomy": "^1.1.1",
     "really-smooth-scroll": "^2.1.1",
